[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repomapper"
version = "0.1.0"
description = "Repository Understanding for Coding Agents — generates AGENTS.md from any repo"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Pedro Sordo Martínez", email = "amurlaniakea@gmail.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]

[project.scripts]
repomapper = "repomapper:main"

[tool.setuptools.packages.find]
include = ["repomapper*"]
